--- a/.github/workflows/build-eclosion.yml
+++ b/.github/workflows/build-eclosion.yml
@@ -155,7 +155,7 @@ jobs:
         with:
           payload: |
             {
-              "text": "ANGULAR - *✅ Build et déploiement réussis pour l'environnement ${{ inputs.environment == 'staging' && ':construction:' || ':rocket:' }} ${{ inputs.environment }}*\n\n*Détails :*\n• Environnement : *${{ inputs.environment }}*\n• Dépôt : *${{ github.repository }}*\n• Branche : *${{ github.ref_name }}*\n• Déclenché par : *${{ github.actor }}*\n• Date : *${{ env.deploy_date }}*\n• Timeout : *15 minutes*\n\n*Commit :*\n• Message : ${{ env.clean_commit_message }}\n• Auteur : ${{ github.event.head_commit.author.name }}\n• Commit : <${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>\n\n*Durée :* *${{ env.duration }} secondes*\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|🔍 Voir le workflow>"
+              "text": "ANGULAR - *${{ github.repository }}* \n\n *✅ Build et déploiement réussis pour l'environnement ${{ inputs.environment == 'staging' && ':construction:' || ':rocket:' }} ${{ inputs.environment }}*\n\n*Détails :*\n• Environnement : *${{ inputs.environment }}*\n• Dépôt : *${{ github.repository }}*\n• Branche : *${{ github.ref_name }}*\n• Déclenché par : *${{ github.actor }}*\n• Date : *${{ env.deploy_date }}*\n• Timeout : *15 minutes*\n\n*Commit :*\n• Message : ${{ env.clean_commit_message }}\n• Auteur : ${{ github.event.head_commit.author.name }}\n• Commit : <${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>\n\n*Durée :* *${{ env.duration }} secondes*\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|🔍 Voir le workflow>"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -173,7 +173,7 @@ jobs:
         with:
           payload: |
             {
-              "text": "🚨 *Échec du déploiement pour l'environnement ${{ inputs.environment == 'staging' && ':construction:' || ':rocket:' }} ${{ inputs.environment }}*\n\n*Détails :*\n• Environnement : *${{ inputs.environment }}*\n• Dépôt : *${{ github.repository }}*\n• Branche : *${{ github.ref_name }}*\n• Déclenché par : *${{ github.actor }}*\n• Date : *${{ env.deploy_date }}*\n• Job échoué : *build ou deploy*\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|🔍 Voir le workflow>"
+              "text": "ANGULAR - *${{ github.repository }}* \n\n 🚨 *Échec du déploiement pour l'environnement ${{ inputs.environment == 'staging' && ':construction:' || ':rocket:' }} ${{ inputs.environment }}*\n\n*Détails :*\n• Environnement : *${{ inputs.environment }}*\n• Dépôt : *${{ github.repository }}*\n• Branche : *${{ github.ref_name }}*\n• Déclenché par : *${{ github.actor }}*\n• Date : *${{ env.deploy_date }}*\n• Job échoué : *build ou deploy*\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|🔍 Voir le workflow>"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
