--- a/.github/workflows/build-wordpress.yml
+++ b/.github/workflows/build-wordpress.yml
@@ -89,49 +89,59 @@ jobs:
         with:
           ssh-private-key: ${{ inputs.environment == 'staging' && secrets.SSH_PRIVATE_KEY_STAGING || secrets.SSH_PRIVATE_KEY_PROD }}
 
-      - name: Déploiement et build
+      - name: Déploiement et build (générique, shell-agnostic)
         shell: bash
         env:
           SSH_USER: ${{ inputs.environment == 'staging' && secrets.SSH_USER_STAGING || secrets.SSH_USER_PROD }}
           SERVER_HOST: ${{ inputs.environment == 'staging' && secrets.SERVER_HOST_STAGING || secrets.SERVER_HOST_PROD }}
           PROJECT_PATH: ${{ inputs.environment == 'staging' && secrets.PROJECT_PATH_STAGING || secrets.PROJECT_PATH_PROD }}
         run: |
-          # On exécute explicitement sous bash côté serveur, sans sourcer zsh
-          ssh -o StrictHostKeyChecking=no "$SSH_USER@$SERVER_HOST" /bin/bash -lc "
-            set -euo pipefail
+          BRANCH="${{ github.ref_name }}"
+          MODE="${{ steps.env.outputs.build_command }}"  # "dev" en staging, "build" en prod (déjà défini dans ton job)
 
-            cd \"$PROJECT_PATH\"
+          # On pousse un script Bash côté serveur via here-doc + bash -s -- (indépendant du shell par défaut)
+          ssh -o StrictHostKeyChecking=no "$SSH_USER@$SERVER_HOST" bash -s -- "$PROJECT_PATH" "$BRANCH" "$MODE" <<'BASH'
+          set -euo pipefail
+          PROJECT_PATH="$1"
+          BRANCH="$2"
+          MODE="$3"
 
-            # Git à jour
-            git fetch --all --prune
-            git pull --ff-only || true
+          cd "$PROJECT_PATH"
 
-            # package.json a-t-il changé ? (tolérant au 1er déploiement)
-            if git rev-parse --verify HEAD~1 >/dev/null 2>&1; then
-              PKG_CHANGED=\$(git diff --name-only HEAD~1 -- package.json || true)
-            else
-              PKG_CHANGED=\"\"
-            fi
+          # 1) Git à jour (force la branche distante suivie)
+          git fetch --all --prune
+          git reset --hard "origin/${BRANCH}"
 
-            # Choix install: ci si lockfile, sinon install
-            if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
-              INSTALL_CMD=\"npm ci\"
-            else
-              echo '⚠️  Aucun lockfile → fallback npm install'
-              INSTALL_CMD=\"npm install\"
-            fi
+          # 2) Assurer Node/NPM dispo, quels que soient les serveurs
+          #    - si nvm est installé: on le charge, et on honore .nvmrc si présent
+          #    - sinon: on compte sur npm global
+          if [ -s "$HOME/.nvm/nvm.sh" ]; then
+            . "$HOME/.nvm/nvm.sh"
+            [ -f .nvmrc ] && nvm use || true
+          fi
 
-            # Installer seulement si nécessaire
-            if [ ! -d node_modules ] || [ -n \"\$PKG_CHANGED\" ]; then
-              echo \"📦 \$INSTALL_CMD\"
-              \$INSTALL_CMD
-            else
-              echo '✅ Dépendances OK (node_modules présent, package.json inchangé)'
-            fi
+          if ! command -v npm >/dev/null 2>&1; then
+            echo "❌ npm introuvable dans PATH. Installe Node globalement ou charge nvm dans le shell non-interactif (~/.bashrc)."
+            exit 1
+          fi
 
-            # Build
-            npm run ${{ steps.env.outputs.build_command }}
-          "
+          echo "Node: $(node -v) | npm: $(npm -v)"
+
+          # 3) Installer deps (ci si lockfile, sinon fallback install)
+          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            INSTALL_CMD="npm ci"
+          else
+            echo "⚠️  Aucun lockfile → fallback npm install"
+            INSTALL_CMD="npm install"
+          fi
+
+          $INSTALL_CMD
+
+          # 4) Build (dev ou build)
+          npm run "$MODE"
+
+          echo "✅ Déploiement terminé."
+          BASH
 
   notify-success:
     if: success()
